adding js - getting value of input

--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <body>
     <h2 id="title" class="title">Title</h2>
     
-    <div id="interestsInput" class="interests">
-        <input class="inputText inputText" type="text" value="Doe"><br><br>
-        <input class="inputSubmit inputText" type="submit" value="Submit">
-    </div>
+    <form id="interestsInput" class="interests">
+        <input id="interestsText" class="inputText inputText" type="text" placeholder="What are your interests?"><br><br>
+        <button class="inputSubmit inputText" type="submit">Submit</button>
+    </form>
 
     <div id="interestsTags" class="interests">
         <ul>
@@ -22,5 +22,7 @@
             <li>Four</li>
         </ul>
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
